[tool.poetry]
name = "exchange-rate-telegram-bot"
version = "0.1.0"
description = ""
authors = ["2Cheetah <fckninja@gmail.com>"]
readme = "README.md"
packages = [{include = "exchange_rate_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
aiogram = "^2.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
